<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">To-Do List</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="title_activity_create">CreateActivity</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="Title">Title</string>
    <string name="Date">Date</string>
    <string name="time">Time</string>
    <string name="priority">Priority</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="save">Save</string>
    <string name="title_activity_display_task">DisplayTaskActivity</string>
    <string name="display_info">Display Information</string>

</resources>
